# evolution-python

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  index.md  parity.md  quickstart.md  reference.md  webhooks.md
docs/stylesheets/: extra.css
src/evolution_api/: __init__.py  _http.py  _protocol.py  _spec.py  client.py  exceptions.py  instance.py  logging.py  media.py  messages.py  numbers.py
src/evolution_api/webhooks/: __init__.py  dataframe.py  fastapi.py  models.py  parse.py
tests/: conftest.py  test_async.py  test_http.py  test_jid_and_config.py  test_media.py  test_messages.py  test_webhooks.py
