[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolution-api"
version = "0.1.0"
description = "A modern Python client for the Evolution API v2 (WhatsApp) — the twin of the R 'evolution' package."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Andre Leite", email = "leite@de.ufpe.br" },
  { name = "Hugo Vasconcelos", email = "hugo.vasconcelos@ufpe.br" },
  { name = "Diogo Bezerra", email = "diogo.bezerra@ufpe.br" },
]
maintainers = [
  { name = "Andre Leite", email = "leite@de.ufpe.br" },
]
keywords = ["whatsapp", "evolution-api", "messaging", "chatbot", "baileys", "httpx", "async"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/StrategicProjects/evolution-python"
Documentation = "https://strategicprojects.github.io/evolution-python/"
Repository = "https://github.com/StrategicProjects/evolution-python"
Issues = "https://github.com/StrategicProjects/evolution-python/issues"
"R sibling (CRAN)" = "https://cran.r-project.org/package=evolution"

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
pandas = ["pandas>=2.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.5",
  "fastapi>=0.110",
  "pandas>=2.0",
  "pandas-stubs",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evolution_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src/evolution_api"]

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
